# graph_editor

./: .gitignore  Cargo.toml  Trunk.toml  index.html  readme.md
graph_editor/: package-lock.json  package.json
src/: app.rs  lib.rs  main.rs
src/app/: node.rs  wzrd_node_graph.rs
src/app/node/: structs.rs
wsl$/Ubuntu-20.04/home/banshay/projects/wzrd-annotation-processor/src/main/java/com/banshay/wzrd/: EnableWzrd.java
