[package]
name = "graph_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.71"
eframe = "0.21.3"
egui_node_graph = { path = "../egui_node_graph/egui_node_graph" }
serde = { version = "1.0.162", optional = true }
ecolor = "0.21.0"
regex = "1.8.1"
lazy_static = "1.4.0"
env_logger = "0.10.0"
log = "0.4.17"
instant = "0.1.12"
lib-ruby-parser = "4.0.4"
enum-iterator = "1.4.1"
slotmap = "1.0.6"
queues = "1.1.0"

[target.'cfg(target_arch="wasm32")'.dependencies]
web-sys = "0.3.61"
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.34"
console_error_panic_hook = "0.1.7"
instant = { version = "0.1.12", features = ["wasm-bindgen", "stdweb"] }



[features]
default = ["persistence"]
persistence = ["serde", "egui_node_graph/persistence", "eframe/persistence"]
